# tap-slack

./: .gitignore  README.md  meltano.yml  pyproject.toml  tap-slack.sh  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: test.yml
tap_slack/: __main__.py  client.py  streams.py  tap.py  testing.py
tap_slack/schemas/: __init__.py  channel_members.py  channels.py  files.py  integration_logs.py  messages.py  reactions.py  threads.py  user_groups.py  users.py
tap_slack/tests/: __init__.py
tests/: conftest.py  test_core.py  test_streams.py
