[tool.poetry]
name = "tap-slack"
version = "0.0.1"
description = "`tap-slack` is a Singer tap for Slack, built with the Meltano SDK for Singer Taps."
authors = ["Stephen Bailey"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^21.9b0"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-slack = 'tap_slack.tap:TapSlack.cli'
