[project]
name = "tap-slack"
version = "0.2.0"
description = "Singer tap for Slack, built with the Meltano SDK."
authors = [
    { name = "Stephen Bailey" },
    { name = "Meltano Team", email = "hello@meltano.com" },
]
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "backports-datetime-fromisoformat>=2.0.3 ; python_full_version < '3.11'",
    "requests~=2.32.4",
    "singer-sdk~=0.48.0",
]

[project.scripts]
tap-slack = "tap_slack.tap:TapSlack.cli"

[dependency-groups]
dev = [
    { include-group = "testing" },
    "types-requests>=2.32.0",
]
testing = [
    "pytest>=8",
    "singer-sdk[testing]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.tox]
min_version = "4.22"
equires = [ "tox", "tox-uv" ]
env_list = [
  "format",
  "3.13",
]

[tool.tox.env_run_base]
description = "Run integration tests"
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_SLACK_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.format]
description = "Format code"
runner = "uv-venv-runner"
deps = [ "ruff" ]
commands = [
    [ "ruff", "check", "tap_slack/" ],
    [ "ruff", "format", "tap_slack/" ],
]

[tool.tox.env.lint]
description = "Lint code"
runner = "uv-venv-runner"
deps = [ "ruff" ]
commands = [
    [ "ruff", "check", "--diff", "tap_slack/" ],
    [ "ruff", "format", "--check", "tap_slack/" ],
]
